--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  h1 Find your TRAIN!
+  h1 Find your Train!!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
-      h2 Trains
+      h1 Trains
       #trains.d-flex.flex-row
     #trainInfo
       strong  <span id='trainName'></span>
